--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,9 @@ thirdparty/
 .vimrc
 .lvimrc
 .local_vimrc
+*.swp
+# ctags
+tags
 
 #### Archives ####
 # It's better to unpack these files and commit the raw source because
