SEAL key generation using OpenMP implemented. CNN performs well except for bootstrapping

--- a/cnn_ckks/CMakeLists.txt
+++ b/cnn_ckks/CMakeLists.txt
@@ -28,7 +28,7 @@ endif()
 
 if(CNN)
 	add_subdirectory(common)
-	# add_subdirectory(cpu-ckks/single-key/cnn)
+	add_subdirectory(cpu-ckks/single-key/cnn)
 	add_subdirectory(cpu-ckks/single-key/comp)
 	# add_subdirectory(cpu-ckks/single-key/ckks_bootstrapping)
 	add_executable(cnn)
@@ -36,12 +36,12 @@ if(CNN)
 		PRIVATE
 			./run/run_cnn.cpp
 			${COMMON_SOURCE_FILES}
-			# ${CNN_SOURCE_FILES}
+			${CNN_SOURCE_FILES}
 			${COMP_SOURCE_FILES}
 			# ${BOOTSTRAPPING_SOURCE_FILES}
 	)
 	target_compile_options(cnn PRIVATE -w -O0 -std=c++17 -pthread -march=native -fopenmp)
 	target_link_libraries(cnn PRIVATE ntl gmp m pthread SEAL::seal gomp)
 	# target_include_directories(cnn PUBLIC /usr/include /usr/local/include /usr/local/include/NTL ${COMMON_HEADER_DIR} ${CNN_HEADER_DIR} ${COMP_HEADER_DIR} ${BOOTSTRAPPING_HEADER_DIR})
-	target_include_directories(cnn PUBLIC /usr/include /usr/local/include /usr/local/include/NTL ${COMMON_HEADER_DIR} ${COMP_HEADER_DIR})
+	target_include_directories(cnn PUBLIC /usr/include /usr/local/include /usr/local/include/NTL ${COMMON_HEADER_DIR} ${CNN_HEADER_DIR} ${COMP_HEADER_DIR})
 endif()
