--- a/gpt2_ckks/gpt2-ckks/single-key/gpt2/CMakeLists.txt
+++ b/gpt2_ckks/gpt2-ckks/single-key/gpt2/CMakeLists.txt
@@ -2,8 +2,11 @@ message(STATUS "include gpt2 directory")
 
 # Source files in this directory
 set(GPT2_SOURCE_FILES ${GPT_SOURCE_FILES}
-	${CMAKE_CURRENT_LIST_DIR}/matrix_mul.cpp
+	${CMAKE_CURRENT_LIST_DIR}/IterApprox.cpp
+	${CMAKE_CURRENT_LIST_DIR}/MatrixMul.cpp
+	${CMAKE_CURRENT_LIST_DIR}/PolyApprox.cpp
 	${CMAKE_CURRENT_LIST_DIR}/util.cpp
+	${CMAKE_CURRENT_LIST_DIR}/Fold.cpp
 )
 
 set(GPT2_SOURCE_FILES ${GPT2_SOURCE_FILES} PARENT_SCOPE)
